# fastapi-cloud-workspaces

./: .dockerignore  .env.example  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  Dockerfile.worker  Makefile  README.md  alembic.ini  app.db  check_db.py  check_other_db.py  docker-compose.worker.yml  docker-compose.yml  init_workspace_roles.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  test_auth.py  test_auth_only.py  test_auth_setup.py  test_workspace_creation.py  test_workspace_system.py
backend/alembic/: env.py
backend/alembic/versions/: 05497957d66c_fix_workspace_members_complete.py  133cc5e3c04b_add_missing_workspace_columns.py  882403043cca_fix_workspace_timestamps_default.py  a7c31c51c55e_add_users_table.py  afc572f9a11e_add_workspace_management_tables.py
backend/app/: __init__.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  health.py  router.py  storage.py  users.py  workspaces.py
backend/app/core/: auth_middleware.py  celery_app.py  config.py  database.py  events.py  exceptions.py  logger.py  metrics.py  middleware.py  models.py  openapi.py  rate_limiting.py  rbac.py  security.py  validation_config.py  validators.py  workspace_middleware.py
backend/app/modules/: __init__.py
backend/app/modules/auth/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/modules/storage/: __init__.py  cleanup.py  cron.py  models.py  router.py  schemas.py  service.py  tasks.py
backend/app/modules/storage/drivers/: __init__.py  base.py  minio_driver.py  s3_driver.py
backend/app/modules/workspace/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/tasks/: __init__.py  backup.py  cleanup.py  file_processing.py
backend/scripts/: init-db.sql
backend/tests/: conftest.py  test_auth_service.py  test_database_manager.py  test_integration_api.py  test_rbac.py  test_storage.py  test_storage_cleanup_service.py  test_validators.py  test_workspace_service.py
